@@ -13,6 +13,14 @@ Installing Formulator
 
   Upgrading
 
+    to 0.9.3 from earlier versions
+     
+      'items_method' in ListField is gone; you'll have to adjust make
+      your forms use 'items' in the override tab now instead. Sorry
+      about that, it *was* marked experimental. :)
+
+      There should be no other problems in upgrading.
+
     to 0.9.2 from earlier versions 
 
       There should be no significant upgrade problems; your forms
