@@ -1,1 +1,1 @@
-Formulator 0.9.2
+Formulator 0.9.3
